--- a/app/src/main/res/layout-v16/list_item.xml
+++ b/app/src/main/res/layout-v16/list_item.xml
@@ -20,7 +20,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@mipmap/ic_launcher_round"
+            android:contentDescription="@string/thumbnail_description" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
@@ -31,7 +32,7 @@
             android:id="@+id/title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-medium"
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/text_color_book_title"
