--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="color_primary_dark">#388E3C</color>
+    <color name="color_primary">#4CAF50</color>
+    <color name="color_primary_light">#C8E6C9</color>
+    <color name="color_accent">#CDDC39</color>
+    <color name="text_color_book_title">#212121</color>
+    <color name="text_color_author">#757575</color>
+    <color name="text_white">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
 </resources>
