--- a/app/src/main/res/layout-v16/list_item.xml
+++ b/app/src/main/res/layout-v16/list_item.xml
@@ -10,56 +10,65 @@
     android:layout_height="match_parent"
     android:baselineAligned="false">
 
+    <ImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/thumbnail_description"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_marginStart="16dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/thumbnail_description" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
         <TextView
             android:id="@+id/title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:layout_gravity="start"
             android:textColor="@color/text_color_book_title"
             android:textSize="16sp"
-            tools:text="San Francisco"/>
+            tools:text="Android"/>
 
-    <TextView
-        android:id="@+id/author_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="author"
-        android:paddingLeft="16dp"
-        android:paddingStart="16dp" />
+        <TextView
+            android:id="@+id/author_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/text_color_author"
+            android:textSize="12sp"
+            android:layout_marginTop="5dp"
+            tools:text="Joao Junqueira" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    <TextView
-        android:id="@+id/rating_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="5.0"
-        android:paddingLeft="16dp"
-        android:paddingStart="16dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/rating_text_view"
+            android:layout_width="wrap_content"
+            android:layout_gravity="end"
+            android:fontFamily="sans-serif-medium"
+            android:layout_height="wrap_content"
+            tools:text="5.0" />
+
     </LinearLayout>
 
 
